<resources>
    <string name="app_name">Shared Notes</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_note_details">Note Details</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="temp_user">Temporary User</string>
    <string name="title_activity_list_group">Groups</string>
    <string name="title_activity_shared_note">Group Notes</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_main">Personal Notes</string>
    <string name="group_members_add_their_email_id">Group Members - Add their Email ID \n(Case Sensitive)</string>
    <string name="add_button">Add Button</string>
    <string name="group_name">Group Name</string>
    <string name="save_button">Save Group</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="shared_notes">Shared Notes</string>
    <string name="share_your_notebook_with_your_team">Share Your Notebook With Your Team</string>
    <string name="rahul_sain">Rahul Sain</string>
    <string name="rahul1champ_gmail_com">rzsfjsk192kds@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="your_display_name">Your Display Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_not_verified">Email Not Verified!</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="user_icon">User Icon</string>
    <string name="mail_icon">Mail Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="change_profile">Change Profile</string>
    <string name="general">General</string>
    <string name="groups">Groups</string>
    <string name="add_note">Add Personal Note</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="support">Support</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="group_info">Group Info</string>
    <string name="delete_button_icon">Delete Button Icon</string>
    <string name="save_note">Save Note</string>
    <string name="title">Title</string>
    <string name="group_admin">Group Admin</string>
    <string name="disband_group">Disband Group</string>
    <string name="app_logo">App Logo</string>
    <string name="note_title">Note Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_content">Note Content</string>
    <string name="update_note">Update Note</string>
    <string name="write_your_note_content_here">Write Your Note Content Here</string>
    <string name="note_menu_icon">Note Menu Icon</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sync_now">Sync Now</string>
    <string name="login_here">Login Here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="create_new_group">Create New Group</string>
    <string name="version_name">Version</string>
    <string name="version_number">1.00001</string>
    <string name="created_by">Created by %s</string>
    <string name="firebase_web_client_id">"452714379990-7si2argiut3i7l3mm4d0sitqjs011684.apps.googleusercontent.com"</string>
</resources>